--- a/css/frame.css
+++ b/css/frame.css
@@ -35,25 +35,30 @@ ol.noneStyle,
 .noneStyle ol{list-style:none; list-style-image:none;}
 
 .container{margin:0 auto;}
-
-.tw4Container{max-width:64rem;position: absolute;left:0;right:0;top:0;bottom:0;margin:0 auto;padding:4rem 0 5rem;background: #fff;}
-
+/* 主体内容 */
+.tw4Container{max-width:64rem;position: absolute;left:0;right:0;top:0;bottom:0;margin:0 auto;padding:4rem 0 5rem;background: #fff;
+	-webkit-transition: all .25s ease;
+	   -moz-transition: all .25s ease;
+	    -ms-transition: all .25s ease;
+	     -o-transition: all .25s ease;
+	        transition: all .25s ease;
+}
+/* 背景 */
 .tw4Container .tw4PagesBg{width:160%;height:100%;position: absolute;top:0;bottom:0;left:-10%;background: url(../images/bg.jpg) no-repeat center center;
 	-webkit-background-size: cover;
 			background-size: cover;
 }
+/* 主体页面分页 */
+.tw4Container .tw4PagePagination{width:100%;height:5rem;position: absolute;left:0;right:0;bottom:0;background-color: #ccc;z-index: 9;border-top: 1px solid #C7C7C7;background: #e9e9e9 url('../images/nav_bg.jpg') repeat-x center 0;-webkit-background-size: contain;background-size: contain;}
+.tw4Container .tw4PagePagination .paginationItem{float: left;text-align: center;height: 100%;border-radius: 0;background-color:transparent!important;position: relative;opacity: 1;}
+.tw4Container .tw4PagePagination .paginationItem span{display: block;padding:3rem 0 0;font-family: 'Microsoft Yahei';font-size: 1.4rem;}
+.tw4Container .tw4PagePagination .paginationItem img{position: absolute;left:0;right:0;top:0;bottom:1.9rem;margin:auto;}
+.tw4Container .tw4PagePagination .paginationItem img.hoverIcon{display: none;}
+.tw4Container .tw4PagePagination .paginationItem.paginationActive img.defIcon{display: none;}
+.tw4Container .tw4PagePagination .paginationItem.paginationActive img.hoverIcon{display: block;}
+.tw4Container .tw4PagePagination .paginationItem.paginationActive span{color:#FF552E;}
 
-.tw4Container .pagePagination{width:100%;height:5rem;position: absolute;left:0;right:0;bottom:0;background-color: #ccc;z-index: 9;border-top: 1px solid #C7C7C7;background: #e9e9e9 url('../images/nav_bg.jpg') repeat-x center 0;-webkit-background-size: contain;background-size: contain;}
-.tw4Container .pagePagination .paginationItem{float: left;text-align: center;height: 100%;border-radius: 0;background-color:transparent!important;position: relative;opacity: 1;}
-.tw4Container .pagePagination .paginationItem span{display: block;padding:3rem 0 0;font-family: 'Microsoft Yahei';font-size: 1.4rem;}
-.tw4Container .pagePagination .paginationItem img{position: absolute;left:0;right:0;top:0;bottom:1.9rem;margin:auto;}
-.tw4Container .pagePagination .paginationItem img.hoverIcon{display: none;}
-.tw4Container .pagePagination .paginationItem.swiper-pagination-bullet-active img.defIcon{display: none;}
-.tw4Container .pagePagination .paginationItem.swiper-pagination-bullet-active img.hoverIcon{display: block;}
-.tw4Container .pagePagination .paginationItem.swiper-pagination-bullet-active span{color:#FF552E;}
-
-.swiper-container {width: 100%;height: 100%;}
-
+/* 头部 */
 #header{background-color: #FF552E;height:4rem;position: absolute;top:0;left:0;right:0;z-index: 9;}
 #header .item{height:100%;padding:0 .8rem;font:1.6rem/4rem 'Microsoft Yahei';color:#fff;}
 #header .item.left{float: left;}
@@ -64,10 +69,16 @@ ol.noneStyle,
 #header .item.title{position: absolute;left:8rem;right:8rem;overflow-x: hidden;text-align: center;padding:0;}
 #header .item.title.logo{text-align: left;left:0;padding-left: 4.6rem;background:url(../images/logo2.png) no-repeat .8rem center;font-size: 1.8rem;}
 
-#tw4_pages{}
-#tw4_pages .pageItem{overflow-x: hidden;overflow-y: auto;}
+/* 主体页面 */
+#tw4_pages{width: 100%;height: 100%;}
+#tw4_pages .pageItem{overflow-x: hidden;overflow-y: auto;width: 100%;height: 100%;position: relative;
+	-webkit-flex-shrink: 0;
+    	-ms-flex: 0 0 auto;
+    		flex-shrink: 0;
+}
 
-#tw4_onepage{position: absolute;left:100%;right:-100%;top:0;bottom:0;background-color: #fff;z-index: 10;padding-top:4rem;
+/* 单页 */
+#tw4_onepage{position: absolute;left:100%;right:-100%;top:0;bottom:0;background-color: #fff;z-index: 99;padding-top:4rem;
 	-webkit-transition: all .25s ease;
 	   -moz-transition: all .25s ease;
 	    -ms-transition: all .25s ease;
@@ -79,7 +90,7 @@ ol.noneStyle,
 #tw4_onepage.fullScreen .op_header{top:-4rem;}
 #tw4_onepage.fullScreen.show .quit{display:block;}
 
-#tw4_onepage .quit{width:3.6rem;height:3.6rem;border:1px solid #000;border-color:rgba(0,0,0,.5);border-radius: 50%;background:#fff url(../images/quit.png) no-repeat center center;background-color:rgba(255,255,255,.3);position: fixed;right:3%;bottom: 12%;z-index: 99;display:none;
+#tw4_onepage .quit{width:3.6rem;height:3.6rem;border:1px solid #000;border-color:rgba(0,0,0,.5);border-radius: 50%;background:#fff url(../images/quit.png) no-repeat center center;background-color:rgba(255,255,255,.6);position: fixed;right:3%;bottom: 12%;z-index: 100;display:none;
 	-webkit-background-size: 55%;
 			background-size: 55%;
 }
@@ -94,8 +105,21 @@ ol.noneStyle,
 #tw4_onepage .op_content{overflow-x: hidden;overflow-y: auto;height: 100%;}
 #tw4_onepage .op_content iframe{margin:0;padding:0;width:100%;height:100%;border:none;}
 
+/* 更多列表导航 */
+#tw4_more_list{width:80%;position: absolute;left:-80%;top:0;bottom:0;background-color:#f3f3f3;border-right:1px solid #666;margin-left:-1px;z-index: 100;box-shadow:.3rem 0 1rem rgba(255,255,255,0);
+	-webkit-transition: all .25s ease;
+	   -moz-transition: all .25s ease;
+	    -ms-transition: all .25s ease;
+	     -o-transition: all .25s ease;
+	        transition: all .25s ease;
+}
+#tw4_more_list.show{left:0;box-shadow:.3rem 0 1rem rgba(255,255,255,.8);}
+#tw4_more_list .moreBlockHeader{height: 4rem;border-bottom: 1px solid #ccc;background-color:#e6e6e6;box-shadow: 0 1px 1px #fff;font:1.6rem/4rem 'Microsoft Yahei';color:#666;text-align: center;}
+#tw4_more_list .moreBlockContent{position: absolute;top:0;bottom:0;left:0;right:0;overflow-x: hidden;overflow-y: auto;}
+#tw4_more_list .moreBlockContent.hasHeader{top:4rem;}
+
 @media screen and (max-width: 480px) {
-	.tw4Container .pagePagination .paginationItem img{
+	.tw4Container .tw4PagePagination .paginationItem img{
 		-webkit-transform: scale(.75);
 		   -moz-transform: scale(.75);
 		    -ms-transform: scale(.75);
@@ -131,7 +155,7 @@ ol.noneStyle,
 }
 
 @media screen and (max-width: 320px) {
-	.tw4Container .pagePagination .paginationItem img{
+	.tw4Container .tw4PagePagination .paginationItem img{
 		-webkit-transform: scale(.6);
 		   -moz-transform: scale(.6);
 		    -ms-transform: scale(.6);
