--- a/js/sea-modules/loader/loader.css
+++ b/js/sea-modules/loader/loader.css
@@ -1,6 +1,12 @@
 @charset "UTF-8";
 
-#tw4_loader{position: absolute;left:0;right:0;top:0;bottom:0;background-color:rgba(255,255,255,.2);z-index: 20;display: none;}
+#tw4_loader{position: absolute;left:0;right:0;top:0;bottom:0;background-color:rgba(255,255,255,.2);z-index:999;display: none;
+    -webkit-transition: all .25s ease;
+       -moz-transition: all .25s ease;
+        -ms-transition: all .25s ease;
+         -o-transition: all .25s ease;
+            transition: all .25s ease;
+}
 #tw4_loader.show{display: block;}
 
 ._loader {
