--- a/css/frame.css
+++ b/css/frame.css
@@ -106,17 +106,18 @@ ol.noneStyle,
 #tw4_onepage .op_content iframe{margin:0;padding:0;width:100%;height:100%;border:none;}
 
 /* 更多列表导航 */
-#tw4_more_list{width:80%;position: absolute;left:-80%;top:0;bottom:0;background-color:#f3f3f3;border-right:1px solid #666;margin-left:-1px;z-index: 100;box-shadow:.3rem 0 1rem rgba(255,255,255,0);
+#tw4_more_list{width:100%;position: absolute;left:-100%;top:0;bottom:0;background-color:rgba(255,255,255,.01);margin-left:-1px;z-index: 100;
 	-webkit-transition: all .25s ease;
 	   -moz-transition: all .25s ease;
 	    -ms-transition: all .25s ease;
 	     -o-transition: all .25s ease;
 	        transition: all .25s ease;
 }
-#tw4_more_list.show{left:0;box-shadow:.3rem 0 1rem rgba(255,255,255,.8);}
-#tw4_more_list .moreBlockHeader{height: 4rem;border-bottom: 1px solid #ccc;background-color:#e6e6e6;box-shadow: 0 1px 1px #fff;font:1.6rem/4rem 'Microsoft Yahei';color:#666;text-align: center;}
-#tw4_more_list .moreBlockContent{position: absolute;top:0;bottom:0;left:0;right:0;overflow-x: hidden;overflow-y: auto;}
-#tw4_more_list .moreBlockContent.hasHeader{top:4rem;}
+#tw4_more_list.show{left:0;}
+#tw4_more_list .wrapper{background-color:#f3f3f3;border-right:1px solid #666;box-shadow:.3rem 0 1rem rgba(255,255,255,.5);position: absolute;left:0;right:20%;top:0;bottom:0;}
+#tw4_more_list .wrapper .moreBlockHeader{height: 4rem;border-bottom: 1px solid #ccc;background-color:#e6e6e6;box-shadow: 0 1px 1px #fff;font:1.6rem/4rem 'Microsoft Yahei';color:#666;text-align: center;}
+#tw4_more_list .wrapper .moreBlockContent{position: absolute;top:0;bottom:0;left:0;right:0;overflow-x: hidden;overflow-y: auto;}
+#tw4_more_list .wrapper .moreBlockContent.hasHeader{top:4rem;}
 
 @media screen and (max-width: 480px) {
 	.tw4Container .tw4PagePagination .paginationItem img{
