--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,9 @@
 .bannerPaginatio{position: absolute;z-index: 9;text-align: right;}
 .bannerPaginatio .swiper-pagination-bullet{width:6px;height:6px;}
 .bannerPaginatio .swiper-pagination-bullet-active{background-color: #fff;}
+
+.henderSearch{position: absolute;left:.5rem;right:.5rem;top:0;bottom:0;height: 2.6rem;border:1px solid #fff;background-color: rgba(255,255,255,.8);padding-left:2.4rem;border-radius:.2rem;margin:auto;}
+.henderSearch .searchIcon{width:2.4rem;height:100%;float: left;margin-left:-2.5rem;background:url(../images/head_search_icon.png) no-repeat center center;}
+.henderSearch input{border:none;padding:0;margin:0;width:100%;height:100%;background-color: transparent;color:#787878;outline:none;}
+.henderSearch input:focus{color:#222;}
+.hasBack .henderSearch{left:4.5rem;}
